--- a/ShTask/Views/Cashiers/Create.cshtml
+++ b/ShTask/Views/Cashiers/Create.cshtml
@@ -1,21 +1,22 @@
-﻿@model ShTask.Models.InvoiceHeader
+﻿@model ShTask.Models.Cashier
 
-@{
-    ViewData["Title"] = "Create";
-}
 
-<h1>Create</h1>
 
-<h4>InvoiceHeader</h4>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Create</title>
+</head>
+<body>
+
+<h4>Cashier</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CashierId" class="control-label"></label>
-                <select asp-for="CashierId" class ="form-control" asp-items="ViewBag.CashierId"></select>
-            </div>
             <div class="form-group">
                 <label asp-for="BranchId" class="control-label"></label>
                 <select asp-for="BranchId" class ="form-control" asp-items="ViewBag.BranchId"></select>
@@ -34,3 +35,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+</body>
+</html>
